# mmn15_defense

./: AESWrapper.cpp  AESWrapper.h  Base64Wrapper.cpp  Base64Wrapper.h  CMakeLists.txt  ClientConfig.cpp  ClientConfig.h  ClientLogic.cpp  ClientLogic.h  ClientManager.cpp  ClientManager.h  ConfigManager.cpp  ConfigManager.h  FileHandler.cpp  FileHandler.h  RSAWrapper.cpp  RSAWrapper.h  ServerConfig.cpp  ServerConfig.h  ServerIcd.h  StringWrapper.cpp  StringWrapper.h  TcpClientChannel.cpp  TcpClientChannel.h  UserInterface.cpp  UserInterface.h  main.cpp  מסמך מחקר.docx
TcpClient/: AESWrapper.h  ClientLogic.h  ConfigManager.cpp  FileHandler.h  TcpClientChannel.cpp  TcpClientChannel.h  main.cpp  transfer.info
TcpServer/: TcpServerChannel.py  client_handler.py  client_info.py  crc.py  database.py  file_handler.py  keys_handler.py  main.py  protocol.py  server.db  server.py  utils.py
libs/cryptopp/share/cmake/cryptopp/: cryptopp-static-targets-debug.cmake  cryptopp-static-targets.cmake  cryptoppConfigVersion.cmake
libs/cryptopp/share/pkgconfig/: cryptopp.pc
